--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0",
+    "swiper": "^11.2.3",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
