--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "firebase": "^11.3.0",
+    "framer-motion": "^12.4.2",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "prop-types": "^15.8.1",
@@ -20,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^7.1.5",
     "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0",
