--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-simple-typewriter": "^5.0.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.2.3",
+    "tailwind-scrollbar": "^4.0.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
