--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "^7.1.5",
     "react-simple-typewriter": "^5.0.1",
+    "recharts": "^2.15.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.2.3",
     "tailwind-scrollbar": "^4.0.0",
